fix: correct repository name to Git-Back in README and package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/rahil1202/gitback.git"
+    "url": "https://github.com/rahil1202/git-back.git"
   },
   "keywords": ["github", "commit", "automation", "backdate", "education"],
   "author": "Rahil Vahora",
